--- a/project_final_report_008-17.ipynb
+++ b/project_final_report_008-17.ipynb
@@ -2504,7 +2504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 62,
    "id": "e8db738e-f9ba-42b7-a687-95fc37dcd5b3",
    "metadata": {},
    "outputs": [
@@ -2646,57 +2646,64 @@
      "data": {
       "text/html": [
        "<table class=\"dataframe\">\n",
-       "<caption>A rowwise_df: 6 × 2</caption>\n",
+       "<caption>A tibble: 6 × 8</caption>\n",
        "<thead>\n",
-       "\t<tr><th scope=col>time_window</th><th scope=col>player_count</th></tr>\n",
-       "\t<tr><th scope=col>&lt;dttm&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "\t<tr><th scope=col>time_window</th><th scope=col>player_count</th><th scope=col>most_frequent_experience</th><th scope=col>total_session_duration</th><th scope=col>time_of_day</th><th scope=col>day_of_week</th><th scope=col>month</th><th scope=col>hour</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dttm&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;ord&gt;</th><th scope=col>&lt;ord&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>2024-04-06 09:00:00</td><td>2</td></tr>\n",
-       "\t<tr><td>2024-04-06 10:00:00</td><td>1</td></tr>\n",
-       "\t<tr><td>2024-04-06 11:00:00</td><td>0</td></tr>\n",
-       "\t<tr><td>2024-04-06 12:00:00</td><td>0</td></tr>\n",
-       "\t<tr><td>2024-04-06 13:00:00</td><td>0</td></tr>\n",
-       "\t<tr><td>2024-04-06 14:00:00</td><td>0</td></tr>\n",
+       "\t<tr><td>2024-04-06 09:00:00</td><td>2</td><td>Amateur</td><td> 45</td><td>09:00</td><td>Sat</td><td>Apr</td><td> 9</td></tr>\n",
+       "\t<tr><td>2024-04-06 10:00:00</td><td>1</td><td>Amateur</td><td> 41</td><td>10:00</td><td>Sat</td><td>Apr</td><td>10</td></tr>\n",
+       "\t<tr><td>2024-04-06 20:00:00</td><td>1</td><td>Amateur</td><td> 68</td><td>20:00</td><td>Sat</td><td>Apr</td><td>20</td></tr>\n",
+       "\t<tr><td>2024-04-06 21:00:00</td><td>1</td><td>Amateur</td><td> 68</td><td>21:00</td><td>Sat</td><td>Apr</td><td>21</td></tr>\n",
+       "\t<tr><td>2024-04-06 22:00:00</td><td>2</td><td>Amateur</td><td>137</td><td>22:00</td><td>Sat</td><td>Apr</td><td>22</td></tr>\n",
+       "\t<tr><td>2024-04-06 23:00:00</td><td>1</td><td>Pro    </td><td> 69</td><td>23:00</td><td>Sat</td><td>Apr</td><td>23</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A rowwise\\_df: 6 × 2\n",
-       "\\begin{tabular}{ll}\n",
-       " time\\_window & player\\_count\\\\\n",
-       " <dttm> & <int>\\\\\n",
+       "A tibble: 6 × 8\n",
+       "\\begin{tabular}{llllllll}\n",
+       " time\\_window & player\\_count & most\\_frequent\\_experience & total\\_session\\_duration & time\\_of\\_day & day\\_of\\_week & month & hour\\\\\n",
+       " <dttm> & <int> & <chr> & <dbl> & <chr> & <ord> & <ord> & <int>\\\\\n",
        "\\hline\n",
-       "\t 2024-04-06 09:00:00 & 2\\\\\n",
-       "\t 2024-04-06 10:00:00 & 1\\\\\n",
-       "\t 2024-04-06 11:00:00 & 0\\\\\n",
-       "\t 2024-04-06 12:00:00 & 0\\\\\n",
-       "\t 2024-04-06 13:00:00 & 0\\\\\n",
-       "\t 2024-04-06 14:00:00 & 0\\\\\n",
+       "\t 2024-04-06 09:00:00 & 2 & Amateur &  45 & 09:00 & Sat & Apr &  9\\\\\n",
+       "\t 2024-04-06 10:00:00 & 1 & Amateur &  41 & 10:00 & Sat & Apr & 10\\\\\n",
+       "\t 2024-04-06 20:00:00 & 1 & Amateur &  68 & 20:00 & Sat & Apr & 20\\\\\n",
+       "\t 2024-04-06 21:00:00 & 1 & Amateur &  68 & 21:00 & Sat & Apr & 21\\\\\n",
+       "\t 2024-04-06 22:00:00 & 2 & Amateur & 137 & 22:00 & Sat & Apr & 22\\\\\n",
+       "\t 2024-04-06 23:00:00 & 1 & Pro     &  69 & 23:00 & Sat & Apr & 23\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A rowwise_df: 6 × 2\n",
+       "A tibble: 6 × 8\n",
        "\n",
-       "| time_window &lt;dttm&gt; | player_count &lt;int&gt; |\n",
-       "|---|---|\n",
-       "| 2024-04-06 09:00:00 | 2 |\n",
-       "| 2024-04-06 10:00:00 | 1 |\n",
-       "| 2024-04-06 11:00:00 | 0 |\n",
-       "| 2024-04-06 12:00:00 | 0 |\n",
-       "| 2024-04-06 13:00:00 | 0 |\n",
-       "| 2024-04-06 14:00:00 | 0 |\n",
+       "| time_window &lt;dttm&gt; | player_count &lt;int&gt; | most_frequent_experience &lt;chr&gt; | total_session_duration &lt;dbl&gt; | time_of_day &lt;chr&gt; | day_of_week &lt;ord&gt; | month &lt;ord&gt; | hour &lt;int&gt; |\n",
+       "|---|---|---|---|---|---|---|---|\n",
+       "| 2024-04-06 09:00:00 | 2 | Amateur |  45 | 09:00 | Sat | Apr |  9 |\n",
+       "| 2024-04-06 10:00:00 | 1 | Amateur |  41 | 10:00 | Sat | Apr | 10 |\n",
+       "| 2024-04-06 20:00:00 | 1 | Amateur |  68 | 20:00 | Sat | Apr | 20 |\n",
+       "| 2024-04-06 21:00:00 | 1 | Amateur |  68 | 21:00 | Sat | Apr | 21 |\n",
+       "| 2024-04-06 22:00:00 | 2 | Amateur | 137 | 22:00 | Sat | Apr | 22 |\n",
+       "| 2024-04-06 23:00:00 | 1 | Pro     |  69 | 23:00 | Sat | Apr | 23 |\n",
        "\n"
       ],
       "text/plain": [
-       "  time_window         player_count\n",
-       "1 2024-04-06 09:00:00 2           \n",
-       "2 2024-04-06 10:00:00 1           \n",
-       "3 2024-04-06 11:00:00 0           \n",
-       "4 2024-04-06 12:00:00 0           \n",
-       "5 2024-04-06 13:00:00 0           \n",
-       "6 2024-04-06 14:00:00 0           "
+       "  time_window         player_count most_frequent_experience\n",
+       "1 2024-04-06 09:00:00 2            Amateur                 \n",
+       "2 2024-04-06 10:00:00 1            Amateur                 \n",
+       "3 2024-04-06 20:00:00 1            Amateur                 \n",
+       "4 2024-04-06 21:00:00 1            Amateur                 \n",
+       "5 2024-04-06 22:00:00 2            Amateur                 \n",
+       "6 2024-04-06 23:00:00 1            Pro                     \n",
+       "  total_session_duration time_of_day day_of_week month hour\n",
+       "1  45                    09:00       Sat         Apr    9  \n",
+       "2  41                    10:00       Sat         Apr   10  \n",
+       "3  68                    20:00       Sat         Apr   20  \n",
+       "4  68                    21:00       Sat         Apr   21  \n",
+       "5 137                    22:00       Sat         Apr   22  \n",
+       "6  69                    23:00       Sat         Apr   23  "
       ]
      },
      "metadata": {},
@@ -2720,14 +2727,27 @@
     ")\n",
     "head(time_windows)\n",
     "\n",
+    "# perform a cross join between sessions and time windows\n",
     "player_counts <- time_windows |>\n",
-    "  rowwise() |>\n",
-    "  mutate(\n",
-    "    player_count = sum(\n",
-    "      sessions_players_joined$start_time < time_window + hours(1) &  # Session start time before the end of the window\n",
-    "      sessions_players_joined$end_time > time_window               # Session end time after the start of the window\n",
-    "    )\n",
+    "  # use expand_grid to generate all combinations of time_window and sessions\n",
+    "  expand_grid(session = sessions_players_joined) |>\n",
+    "  # filter for sessions that overlap with the time window\n",
+    "  filter(session$start_time < time_window + hours(1) & session$end_time > time_window) |>\n",
+    "  # group by time_window to get player count, most frequent experience level, and total session duration\n",
+    "  group_by(time_window) |>\n",
+    "  summarise(\n",
+    "    player_count = n(),  # count number of sessions overlapping the time window\n",
+    "    most_frequent_experience = names(sort(table(session$experience), decreasing = TRUE))[1],  # Most frequent experience level\n",
+    "    total_session_duration = sum(session$session_duration, na.rm = TRUE),  # Sum of session durations\n",
+    "    .groups = \"drop\"\n",
+    "  ) |>\n",
+    "    mutate(\n",
+    "    time_of_day = format(time_window, \"%H:%M\"),   # extract hour and minute\n",
+    "    day_of_week = wday(time_window, label = TRUE),  # day of the week (Mon, Tue, ..., Sun)\n",
+    "    month = month(time_window, label = TRUE),      # month (Jan, Feb, ..., Dec)\n",
+    "    hour = hour(time_window)                      # hour (0-23)\n",
     "  )\n",
+    "\n",
     "head(player_counts)"
    ]
   },
