One-hot encode categoricals

--- a/project_final_report_008-17.ipynb
+++ b/project_final_report_008-17.ipynb
@@ -2503,8 +2503,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4b81722c-bfd2-41ad-a318-d882dc2ef6dc",
+   "metadata": {},
+   "source": [
+    "### Relevant Insights\n",
+    "- Players by Age histogram shows a skewed distribution with most players between ages 10 and 25, suggesting the relationship between age and other variables may not be linear\n",
+    "- Play Time vs Age scatter plot has most points clustered near the bottom with some outliers spread out, appears non-linear, high variation in play time\n",
+    "- Play Sessions Over Time line plot oscillates wildly, appears non-linear"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 75,
    "id": "e8db738e-f9ba-42b7-a687-95fc37dcd5b3",
    "metadata": {},
    "outputs": [
@@ -2708,6 +2719,101 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 6 × 28</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>time_window</th><th scope=col>player_count</th><th scope=col>most_frequent_experience</th><th scope=col>total_session_duration</th><th scope=col>month</th><th scope=col>day_of_week</th><th scope=col>hour</th><th scope=col>most_frequent_experienceBeginner</th><th scope=col>most_frequent_experiencePro</th><th scope=col>most_frequent_experienceRegular</th><th scope=col>⋯</th><th scope=col>monthSep</th><th scope=col>monthOct</th><th scope=col>monthNov</th><th scope=col>monthDec</th><th scope=col>day_of_weekMon</th><th scope=col>day_of_weekTue</th><th scope=col>day_of_weekWed</th><th scope=col>day_of_weekThu</th><th scope=col>day_of_weekFri</th><th scope=col>day_of_weekSat</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dttm&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;ord&gt;</th><th scope=col>&lt;ord&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>⋯</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>2024-04-06 09:00:00</td><td>2</td><td>Amateur</td><td> 45</td><td>Apr</td><td>Sat</td><td> 9</td><td>0</td><td>0</td><td>0</td><td>⋯</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td></tr>\n",
+       "\t<tr><td>2024-04-06 10:00:00</td><td>1</td><td>Amateur</td><td> 41</td><td>Apr</td><td>Sat</td><td>10</td><td>0</td><td>0</td><td>0</td><td>⋯</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td></tr>\n",
+       "\t<tr><td>2024-04-06 20:00:00</td><td>1</td><td>Amateur</td><td> 68</td><td>Apr</td><td>Sat</td><td>20</td><td>0</td><td>0</td><td>0</td><td>⋯</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td></tr>\n",
+       "\t<tr><td>2024-04-06 21:00:00</td><td>1</td><td>Amateur</td><td> 68</td><td>Apr</td><td>Sat</td><td>21</td><td>0</td><td>0</td><td>0</td><td>⋯</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td></tr>\n",
+       "\t<tr><td>2024-04-06 22:00:00</td><td>2</td><td>Amateur</td><td>137</td><td>Apr</td><td>Sat</td><td>22</td><td>0</td><td>0</td><td>0</td><td>⋯</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td></tr>\n",
+       "\t<tr><td>2024-04-06 23:00:00</td><td>1</td><td>Pro    </td><td> 69</td><td>Apr</td><td>Sat</td><td>23</td><td>0</td><td>1</td><td>0</td><td>⋯</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 6 × 28\n",
+       "\\begin{tabular}{lllllllllllllllllllll}\n",
+       " time\\_window & player\\_count & most\\_frequent\\_experience & total\\_session\\_duration & month & day\\_of\\_week & hour & most\\_frequent\\_experienceBeginner & most\\_frequent\\_experiencePro & most\\_frequent\\_experienceRegular & ⋯ & monthSep & monthOct & monthNov & monthDec & day\\_of\\_weekMon & day\\_of\\_weekTue & day\\_of\\_weekWed & day\\_of\\_weekThu & day\\_of\\_weekFri & day\\_of\\_weekSat\\\\\n",
+       " <dttm> & <int> & <fct> & <dbl> & <ord> & <ord> & <int> & <dbl> & <dbl> & <dbl> & ⋯ & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 2024-04-06 09:00:00 & 2 & Amateur &  45 & Apr & Sat &  9 & 0 & 0 & 0 & ⋯ & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1\\\\\n",
+       "\t 2024-04-06 10:00:00 & 1 & Amateur &  41 & Apr & Sat & 10 & 0 & 0 & 0 & ⋯ & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1\\\\\n",
+       "\t 2024-04-06 20:00:00 & 1 & Amateur &  68 & Apr & Sat & 20 & 0 & 0 & 0 & ⋯ & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1\\\\\n",
+       "\t 2024-04-06 21:00:00 & 1 & Amateur &  68 & Apr & Sat & 21 & 0 & 0 & 0 & ⋯ & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1\\\\\n",
+       "\t 2024-04-06 22:00:00 & 2 & Amateur & 137 & Apr & Sat & 22 & 0 & 0 & 0 & ⋯ & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1\\\\\n",
+       "\t 2024-04-06 23:00:00 & 1 & Pro     &  69 & Apr & Sat & 23 & 0 & 1 & 0 & ⋯ & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 6 × 28\n",
+       "\n",
+       "| time_window &lt;dttm&gt; | player_count &lt;int&gt; | most_frequent_experience &lt;fct&gt; | total_session_duration &lt;dbl&gt; | month &lt;ord&gt; | day_of_week &lt;ord&gt; | hour &lt;int&gt; | most_frequent_experienceBeginner &lt;dbl&gt; | most_frequent_experiencePro &lt;dbl&gt; | most_frequent_experienceRegular &lt;dbl&gt; | ⋯ ⋯ | monthSep &lt;dbl&gt; | monthOct &lt;dbl&gt; | monthNov &lt;dbl&gt; | monthDec &lt;dbl&gt; | day_of_weekMon &lt;dbl&gt; | day_of_weekTue &lt;dbl&gt; | day_of_weekWed &lt;dbl&gt; | day_of_weekThu &lt;dbl&gt; | day_of_weekFri &lt;dbl&gt; | day_of_weekSat &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| 2024-04-06 09:00:00 | 2 | Amateur |  45 | Apr | Sat |  9 | 0 | 0 | 0 | ⋯ | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 1 |\n",
+       "| 2024-04-06 10:00:00 | 1 | Amateur |  41 | Apr | Sat | 10 | 0 | 0 | 0 | ⋯ | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 1 |\n",
+       "| 2024-04-06 20:00:00 | 1 | Amateur |  68 | Apr | Sat | 20 | 0 | 0 | 0 | ⋯ | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 1 |\n",
+       "| 2024-04-06 21:00:00 | 1 | Amateur |  68 | Apr | Sat | 21 | 0 | 0 | 0 | ⋯ | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 1 |\n",
+       "| 2024-04-06 22:00:00 | 2 | Amateur | 137 | Apr | Sat | 22 | 0 | 0 | 0 | ⋯ | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 1 |\n",
+       "| 2024-04-06 23:00:00 | 1 | Pro     |  69 | Apr | Sat | 23 | 0 | 1 | 0 | ⋯ | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | 1 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  time_window         player_count most_frequent_experience\n",
+       "1 2024-04-06 09:00:00 2            Amateur                 \n",
+       "2 2024-04-06 10:00:00 1            Amateur                 \n",
+       "3 2024-04-06 20:00:00 1            Amateur                 \n",
+       "4 2024-04-06 21:00:00 1            Amateur                 \n",
+       "5 2024-04-06 22:00:00 2            Amateur                 \n",
+       "6 2024-04-06 23:00:00 1            Pro                     \n",
+       "  total_session_duration month day_of_week hour\n",
+       "1  45                    Apr   Sat          9  \n",
+       "2  41                    Apr   Sat         10  \n",
+       "3  68                    Apr   Sat         20  \n",
+       "4  68                    Apr   Sat         21  \n",
+       "5 137                    Apr   Sat         22  \n",
+       "6  69                    Apr   Sat         23  \n",
+       "  most_frequent_experienceBeginner most_frequent_experiencePro\n",
+       "1 0                                0                          \n",
+       "2 0                                0                          \n",
+       "3 0                                0                          \n",
+       "4 0                                0                          \n",
+       "5 0                                0                          \n",
+       "6 0                                1                          \n",
+       "  most_frequent_experienceRegular ⋯ monthSep monthOct monthNov monthDec\n",
+       "1 0                               ⋯ 0        0        0        0       \n",
+       "2 0                               ⋯ 0        0        0        0       \n",
+       "3 0                               ⋯ 0        0        0        0       \n",
+       "4 0                               ⋯ 0        0        0        0       \n",
+       "5 0                               ⋯ 0        0        0        0       \n",
+       "6 0                               ⋯ 0        0        0        0       \n",
+       "  day_of_weekMon day_of_weekTue day_of_weekWed day_of_weekThu day_of_weekFri\n",
+       "1 0              0              0              0              0             \n",
+       "2 0              0              0              0              0             \n",
+       "3 0              0              0              0              0             \n",
+       "4 0              0              0              0              0             \n",
+       "5 0              0              0              0              0             \n",
+       "6 0              0              0              0              0             \n",
+       "  day_of_weekSat\n",
+       "1 1             \n",
+       "2 1             \n",
+       "3 1             \n",
+       "4 1             \n",
+       "5 1             \n",
+       "6 1             "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -2747,18 +2853,23 @@
     "    hour = hour(time_window)                      # hour (0-23)\n",
     "  )\n",
     "\n",
-    "head(player_counts)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4b81722c-bfd2-41ad-a318-d882dc2ef6dc",
-   "metadata": {},
-   "source": [
-    "### Relevant Insights\n",
-    "- Players by Age histogram shows a skewed distribution with most players between ages 10 and 25, suggesting the relationship between age and other variables may not be linear\n",
-    "- Play Time vs Age scatter plot has most points clustered near the bottom with some outliers spread out, appears non-linear, high variation in play time\n",
-    "- Play Sessions Over Time line plot oscillates wildly, appears non-linear"
+    "head(player_counts)\n",
+    "\n",
+    "# one-hot encoding the categorical variables\n",
+    "player_counts_encoded <- player_counts |>\n",
+    "  mutate(\n",
+    "    most_frequent_experience = as.factor(most_frequent_experience),  # convert to factor for one-hot encoding\n",
+    "    month = as.factor(month),\n",
+    "    day_of_week = as.factor(day_of_week)\n",
+    "  ) |>\n",
+    "  # one-hot encode using model.matrix\n",
+    "  bind_cols(\n",
+    "    model.matrix(~ most_frequent_experience - 1, data = player_counts)[, -1],  # remove intercept column, one-hot encode most_frequent_experience\n",
+    "    model.matrix(~ month - 1, data = player_counts)[, -1],  # one-hot encode month\n",
+    "    model.matrix(~ day_of_week - 1, data = player_counts)[, -1]  # one-hot encode day_of_week\n",
+    "  )\n",
+    "\n",
+    "head(player_counts_encoded)"
    ]
   },
   {
