Finish methods desc

--- a/project_final_report_008-17.ipynb
+++ b/project_final_report_008-17.ipynb
@@ -36,44 +36,32 @@
    "source": [
     "## Methods & Results\n",
     "\n",
-    "**Data Acquisition**:\n",
+    "**Data Wrangling**:\n",
     "   - Loaded player and session datasets using URLs\n",
     "   - Converted `start_time` and `end_time` columns to `POSIXct` using `lubridate::dmy_hm()` for time-based analysis\n",
-    "\n",
-    "**Data Preprocessing**:\n",
     "   - Removed unnecessary columns (`individualId`, `organizationName` from players; `original_start_time`, `original_end_time` from sessions)\n",
     "   - Handled missing values using `select_if` to identify columns with `NA` values\n",
-    "   - Converted categorical variables (`month`, `day_of_week`, `experience`) to numeric format via `recode()` and `factor()`\n",
     "\n",
     "**Feature Engineering**:\n",
-    "   - Created `time_windows` using `seq()` and `floor_date()` to group session data into hourly intervals.\n",
-    "   - Aggregated data by `time_window` to compute `player_count`, `most_frequent_experience`, and `total_session_duration`.\n",
-    "   - Encoded categorical variables (`month`, `day_of_week`, `experience`) as numeric.\n",
+    "   - Created `time_windows` using `seq()`, `floor_date()`, and `ceiling_date()` to group session data into hourly intervals\n",
+    "   - Aggregated data by `time_window` to compute `player_count`, `most_frequent_experience`, and `total_session_duration`\n",
+    "   - Encoded categorical variables (`month`, `day_of_week`, `experience`) as numeric\n",
     "\n",
-    "**Data Splitting**:\n",
-    "   - Split data into training (80%) and test (20%) sets using `initial_split()` from `rsample`.\n",
+    "**KNN Regression**:\n",
+    "   - Split data into training (80%) and test (20%) sets using `initial_split()` from `rsample`\n",
+    "   - Defined a KNN regression model using `nearest_neighbor()` with `kknn` engine, and set `neighbors` to be tuned\n",
+    "   - Set up 5-fold cross-validation using `vfold_cv()` to evaluate model performance\n",
+    "   - Implemented forward selection to iteratively add predictors to the model based on minimizing `RMSE` (Root Mean Squared Error)\n",
+    "   - Tuned the number of neighbors ,`K`, in between 2 and 50 for each model subset using `tune_grid()` and identified the best `K` for each feature combination\n",
     "\n",
-    "**Model Definition**:\n",
-    "   - Defined a KNN regression model using `nearest_neighbor()` with `kknn` engine, and set `neighbors` to be tuned.\n",
-    "\n",
-    "**Cross-Validation**:\n",
-    "   - Set up 5-fold cross-validation using `vfold_cv()` to evaluate model performance.\n",
-    "\n",
-    "**Forward Selection Algorithm**:\n",
-    "   - Implemented forward selection to iteratively add predictors to the model based on minimizing `RMSE` (Root Mean Squared Error).\n",
-    "   - Tuned the number of neighbors (`K`) for each model subset using `tune_grid()` and identified the best `K` for each feature combination.\n",
-    "\n",
-    "**Model Selection**:\n",
-    "   - Selected the best model based on minimum `RMSE` from the forward selection process, recording both the optimal predictors and corresponding `K`.\n",
-    "\n",
-    "**Final Model Evaluation**:\n",
-    "   - Fitted the final model using selected predictors and the optimal `K`.\n",
-    "   - Evaluated the final model on the test set using `RMSE`, `R^2`, and `MAE`.\n",
+    "**Model Selection and Evaluation**:\n",
+    "   - Selected the best model based on minimum `RMSE` from the forward selection process, recording both the optimal predictors and corresponding `K`\n",
+    "   - Fitted the final model using selected predictors and the optimal `K`\n",
+    "   - Evaluated the final model on the test set using `RMSE`, `R^2`, and `MAE`\n",
     "\n",
     "**Results**:\n",
-    "    - The forward selection identified the key predictors: `total_session_duration`, `most_frequent_experience`, and `hour`.\n",
-    "    - The final model achieved reasonable performance metrics (`RMSE`, `R^2`, and `MAE`), but further optimization may improve predictive accuracy.\n",
-    "\n",
+    "   - The forward selection identified the key predictors `total_session_duration`, `most_frequent_experience`, and `hour`\n",
+    "   - The final model achieved reasonable performance metrics (`RMSE`, `R^2`, and `MAE`) with a lot of room for improvement\n",
     "\n",
     "### Exploratory Data Analysis and Visualization"
    ]
