Explain K selection and categorical conversion

--- a/project_final_report_008-17.ipynb
+++ b/project_final_report_008-17.ipynb
@@ -37,27 +37,31 @@
     "## Methods & Results\n",
     "\n",
     "**Data Wrangling**:\n",
-    "   - Loaded player and session datasets using URLs\n",
-    "   - Converted `start_time` and `end_time` columns to `POSIXct` using `lubridate::dmy_hm()` for time-based analysis\n",
-    "   - Removed unnecessary columns (`individualId`, `organizationName` from players; `original_start_time`, `original_end_time` from sessions)\n",
-    "   - Handled missing values using `select_if` to identify columns with `NA` values\n",
+    "- Loaded player and session datasets using URLs\n",
+    "- Converted `start_time` and `end_time` columns to `POSIXct` using `lubridate::dmy_hm()` for time-based analysis\n",
+    "- Removed unnecessary columns (`individualId`, `organizationName` from players; `original_start_time`, `original_end_time` from sessions)\n",
+    "- Handled missing values using `select_if` to identify columns with `NA` values\n",
     "\n",
     "**Feature Engineering**:\n",
-    "   - Created `time_windows` using `seq()`, `floor_date()`, and `ceiling_date()` to group session data into hourly intervals\n",
-    "   - Aggregated data by `time_window` to compute `player_count`, `most_frequent_experience`, and `total_session_duration`\n",
-    "   - Encoded categorical variables (`month`, `day_of_week`, `experience`) as numeric\n",
+    "- Created `time_windows` using `seq()`, `floor_date()`, and `ceiling_date()` to group session data into hourly intervals\n",
+    "- Aggregated data by `time_window` to compute `player_count`, `most_frequent_experience`, and `total_session_duration`\n",
+    "- Encoded categorical variables (`month`, `day_of_week`, `experience`) as numeric\n",
+    "    - Directly converted categorical variables to numbers instead of one-hot encoding because one-hot encoding them resulted in no variation and constant predictors for many subsets of the data\n",
+    "    - Direct conversion to numbers avoided the creation of columns with zero variance\n",
     "\n",
     "**KNN Regression**:\n",
-    "   - Split data into training (80%) and test (20%) sets using `initial_split()` from `rsample`\n",
-    "   - Defined a KNN regression model using `nearest_neighbor()` with `kknn` engine, and set `neighbors` to be tuned\n",
-    "   - Set up 5-fold cross-validation using `vfold_cv()` to evaluate model performance\n",
-    "   - Implemented forward selection to iteratively add predictors to the model based on minimizing `RMSE` (Root Mean Squared Error)\n",
-    "   - Tuned the number of neighbors ,`K`, in between 2 and 50 for each model subset using `tune_grid()` and identified the best `K` for each feature combination\n",
+    "- Split data into training (80%) and test (20%) sets using `initial_split()` from `rsample`\n",
+    "- Defined a KNN regression model using `nearest_neighbor()` with `kknn` engine, and set `neighbors` to be tuned\n",
+    "- Set up 5-fold cross-validation using `vfold_cv()` to evaluate model performance\n",
+    "- Implemented forward selection to iteratively add predictors to the model based on minimizing `RMSE` (Root Mean Squared Error)\n",
+    "- Tuned the number of neighbors ,`K`, in between 2 and 50 for each model subset using `tune_grid()` and identified the best `K` for each feature combination\n",
+    "    - Start from 2 to avoid \"`estimate` is constant and has 0 standard deviation\" warning from a constant prediction\n",
+    "    - `K = 1` is unstable and relies on only the nearest neighbor\n",
     "\n",
     "**Model Selection and Evaluation**:\n",
-    "   - Selected the best model based on minimum `RMSE` from the forward selection process, recording both the optimal predictors and corresponding `K`\n",
-    "   - Fitted the final model using selected predictors and the optimal `K`\n",
-    "   - Evaluated the final model on the test set using `RMSE`, `R^2`, and `MAE`\n",
+    "- Selected the best model based on minimum `RMSE` from the forward selection process, recording both the optimal predictors and corresponding `K`\n",
+    "- Fitted the final model using selected predictors and the optimal `K`\n",
+    "- Evaluated the final model on the test set using `RMSE`, `R^2`, and `MAE`\n",
     "\n",
     "**Results**:\n",
     "   - The forward selection identified the key predictors `total_session_duration`, `most_frequent_experience`, and `hour`\n",
@@ -3598,6 +3602,7 @@
     "\n",
     "head(player_counts)\n",
     "\n",
+    "# Directly converted categorical variables to numbers to avoid the zero variance issues\n",
     "player_counts_numeric <- player_counts |>\n",
     "  mutate(\n",
     "\t# Map months to numeric values (Jan=1, Feb=2, ..., Dec=12)\n",
@@ -3719,6 +3724,7 @@
     "        step_center(all_predictors())\n",
     "      \n",
     "      # Create a grid for tuning K\n",
+    "      # Start from K = 2 to avoid \"`estimate` is constant and has 0 standard deviation\" warning\n",
     "      grid_vals <- tibble(neighbors = seq(from = 2, to = 50))  # Tune from 2 to 50 neighbors\n",
     "      \n",
     "      # Tune K-NN and collect RMSPE for the best K\n",
@@ -3830,6 +3836,14 @@
     "- Unsuitable for extrapolation (predicting beyond the range of values in training data)\n",
     "- May not perform well with sparse data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b31ac4f-1c72-4591-aed6-72287c95b6b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
